--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   sqflite: ^2.0.2
   path_provider: ^2.0.9
   intl: ^0.17.0
+  flutter_slidable: ^1.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
